# actix-web-boilerplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: db.rs  error.rs  main.rs
src/auth/: error.rs  jwt.rs  mod.rs  routes.rs
src/blog/: db.rs  error.rs  mod.rs  models.rs  routes.rs
src/blog/sql/: delete_post.sql  get_post_by_slug.sql  get_posts.sql  insert_post.sql  update_post.sql
src/blog/utils/: generate_unique_slug.rs  mod.rs
src/migrations/: 000_initial.sql  001_users.sql  0_initial.sql
src/user/: db.rs  error.rs  models.rs
src/user/sql/: get_user_by_username.sql
